--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bienvenue sur mon site</h1>
     <img src="https://ibb.co/27BKmSW" alt="Description de l'image">
-    <form action="https://formspree.io/leosnems@gmail.com" method="POST">
+    <form action="https://formspree.io/f/mvgpgjob" method="POST">
         <label for="email">Votre email :</label>
         <input type="email" id="email" name="email" required>
         <button type="submit">S'enregistrer</button>
